--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>设计艺术学院智慧管理系统</title>
     <script>
         // 动态设置font-size
-        var cw = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
-        document.getElementsByTagName("html")[0].style.fontSize = 20 * (cw / 320) + 'px';
+        var screenWidth = window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
+        document.getElementsByTagName("html")[0].style.fontSize = 20 * (screenWidth / 320) + 'px';
 
     </script>
 </head>
